--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <!DOCTYPE html>
   <html lang="en">
     <head>
+    <link rel="preload" as="image" href="/src/assets/sun_tarot_card.png" />
+    <link rel="preload" as="image" href="/src/assets/moon_tarot_card.png" />
+    <link rel="preload" as="image" href="/src/assets/star_tarot_card.png" />
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Duplicate Design</title>
