chore: Update page title to 타로 신년운세

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preload" as="image" href="/src/assets/star_tarot_card.png" />
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Duplicate Design</title>
+      <title>타로 신년운세</title>
     </head>
 
     <body>
