--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     fbq('init', '760804327061544');
     fbq('track', 'PageView');
   </script>
-  <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=760804327061544&ev=PageView&noscript=1" /></noscript>
+
   <!-- End Meta Pixel Code -->
 </head>
 
@@ -44,6 +43,10 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NPRSVW9P" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+  <!-- Meta Pixel (noscript) -->
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=760804327061544&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel (noscript) -->
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
